home page spacing fix

--- a/css/base.css
+++ b/css/base.css
@@ -857,7 +857,7 @@ thead {
   height: auto;
   max-height: 150px;
   margin: 0 auto;
-  padding-top: 14px;
+  padding-top: 5px;
 }
 .news-title {
   font-size: var(--font-size-header);
